# Spectre-gtk

./: .gitignore  .gitmodules  Cargo.toml  README.md  test.rs
GSoC/: GSoC.md
build-aux/: build.rs  com.github.spectre.json  flatpak-build.sh  flatpak-bundle.sh  flatpak-install.sh  org.gnome.masterpassword.json  org.gnome.spectre.json
build-aux/platform/: mod.rs
data/: TESTmpsites.txt  com.github.spectre.desktop  com.github.spectre.metainfo.xml  org.gnome.spectre.desktop  org.gnome.spectre.metainfo.xml  password_list_item.ui  password_list_item.ui~  style.css
src/: config.rs  main.rs  maingtk3.rs  paths.rs  testsWithPrint.rs
src/gtk_ui_files/: testwindow.ui  testwindow.ui~  windows.ui
src/model/: g_site.rs  mod.rs
src/spectre/: mod.rs  spectre_wrapper.h  spectrebind.rs
src/ui/: mod.rs  password_list_box.rs  password_list_item.rs  password_search_box.rs  spectre_app.rs
src/ui/password_window/: imp.rs  mod.rs
