[package]
name = "spectre-gtk"
version = "0.0.6"
authors = ["toger5 <toger5@hotmail.de>"]
edition = "2018"
build = "build-aux/build.rs"

[profile.dev]
rpath = true

[dependencies]
once_cell = "1.5"
num = "0.2"
dirs = "2.0.2"
num-traits = "0.2"
num-derive = "0.2"
pango = "0.9.1"
libc = "0.2.91"

[dependencies.gtk]
package = "gtk4"
version = "0.4.6"
features = ["v4_2"]

#[dependencies.adw]
#package = "libadwaita"
#git = "https://gitlab.gnome.org/bilelmoussaoui/libadwaita-rs.git"
#rev = "6088bb634a406402f308f01d2f33067951d5095b"

[build-dependencies]
bindgen = "0.57"
cc = "1.0.67"