[package]
name = "spectre-gtk"
version = "0.0.8"
authors = ["toger5 <toger5@hotmail.de>"]
edition = "2018"
build = "build-aux/build.rs"

[profile.dev]
rpath = true

[dependencies]
once_cell = "1.5"
num = "0.2"
dirs = "2.0.2"
num-traits = "0.2"
num-derive = "0.2"
pango = "0.9.1"
libc = "0.2.91"

[dependencies.adw]
package = "libadwaita"
version = "0.7.2"
features = ["v1_7"]

[dependencies.gtk]
package = "gtk4"
version = "0.9.4"
features = ["v4_16"]


[build-dependencies]
bindgen = "0.68.1"
cc = "1.0.67"
current_platform = "0.2.0"
